--- a/package.json
+++ b/package.json
@@ -27,14 +27,19 @@
         "@ionic-native/status-bar": "^4.3.0",
         "@ionic/storage": "2.0.1",
         "@types/pouchdb": "^6.3.0",
+        "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.5.1",
         "cordova-plugin-crosswalk-webview": "^2.3.0",
+        "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-inappbrowser": "^1.7.1",
+        "cordova-plugin-ionic-webview": "^1.1.14",
         "cordova-plugin-keyboard": "^1.1.5",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
         "cordova-plugin-whitelist": "^1.3.1",
         "cordova-sqlite-storage": "^2.0.4",
         "ionic-angular": "3.7.1",
+        "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "pouchdb": "^6.3.4",
         "rxjs": "5.4.3",
@@ -54,7 +59,14 @@
             "cordova-plugin-keyboard": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-crosswalk-webview": {}
-        }
+            "cordova-plugin-crosswalk-webview": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-ionic-webview": {},
+            "ionic-plugin-keyboard": {}
+        },
+        "platforms": [
+            "android",
+            "ios"
+        ]
     }
 }
