--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
         "@types/pouchdb": "^6.3.0",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.5.1",
+        "cordova-plugin-browsertab": "^0.2.0",
+        "cordova-plugin-buildinfo": "^2.0.1",
+        "cordova-plugin-compat": "^1.2.0",
         "cordova-plugin-crosswalk-webview": "^2.3.0",
+        "cordova-plugin-customurlscheme": "^4.3.0",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-ionic-webview": "^1.1.14",
@@ -38,6 +42,8 @@
         "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
         "cordova-plugin-whitelist": "^1.3.1",
         "cordova-sqlite-storage": "^2.0.4",
+        "cordova-universal-links-plugin": "^1.2.1",
+        "firebase": "^4.5.0",
         "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -62,7 +68,16 @@
             "cordova-plugin-crosswalk-webview": {},
             "cordova-plugin-device": {},
             "cordova-plugin-ionic-webview": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-buildinfo": {},
+            "cordova-plugin-browsertab": {},
+            "cordova-universal-links-plugin": {},
+            "cordova-plugin-customurlscheme": {
+                "URL_SCHEME": "com.firebase.cordova",
+                "ANDROID_SCHEME": " ",
+                "ANDROID_HOST": " ",
+                "ANDROID_PATHPREFIX": "/"
+            }
         },
         "platforms": [
             "android",
